[package]
name = "noderunner"
version = "0.3.1"
edition = "2021"
description = "Node Runner: Mainnet Protocol — terminal-based action puzzle"

[dependencies]
crossterm = "0.28"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
gilrs = { version = "0.10", optional = true }
rodio = { version = "0.19", optional = true }

[features]
default = ["gamepad", "sound"]
gamepad = ["dep:gilrs"]
sound = ["dep:rodio"]

[profile.release]
opt-level = 3
